--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
-  "name": "brino-agentic-cli",
-  "version": "1.0.0",
+  "name": "bruno-agentic-cli",
+  "version": "2.0.0",
+  "description": "Claude-powered agentic CLI for code analysis and assistance",
+  "type": "module",
+  "bin": {
+    "bruno": "./bin/bruno.js"
+  },
+  "scripts": {
+    "start": "node bin/bruno.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "cli",
+    "claude",
+    "ai",
+    "code-assistant",
+    "developer-tools"
+  ],
+  "author": "JG Tolentino",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.9.0",
+    "@anthropic-ai/sdk": "^0.20.0",
+    "chalk": "^5.3.0",
     "fs-extra": "^11.3.0",
-    "inquirer": "^9.3.7",
-    "path": "^0.12.7"
+    "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
