--- a/config/brunorc.yaml
+++ b/config/brunorc.yaml
@@ -1,11 +1,20 @@
 agent: bruno
-model: claude-3-sonnet-20240229
-llm_provider: anthropic
+llm_provider: local
+local_model: deepseek-coder:6.7b
+ollama_url: http://127.0.0.1:11434
+fallback_provider: none
+allow_cloud: false
 memory: true
 default_tool: explain
 repl_mode: true
 max_tokens: 2048
 temperature: 0.7
+
+# Privacy settings
+privacy:
+  no_telemetry: true
+  no_remote_fetch: true
+  local_sessions_only: true
 
 # Tool configurations
 tools:
@@ -19,8 +28,23 @@ tools:
     coverage_target: 80
     include_edge_cases: true
 
+# Shell sandbox settings
+shell:
+  enabled: true
+  blocked_commands:
+    - "rm -rf"
+    - "sudo"
+    - "curl"
+    - "wget"
+    - "ssh"
+  warn_commands:
+    - "rm"
+    - "mv"
+    - "cp -r"
+
 # Development settings
 dev:
   debug: false
   log_level: info
   cache_responses: true
+  offline_mode: true
