--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "JG Tolentino",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.20.0",
+    "axios": "^1.7.0",
     "chalk": "^5.3.0",
     "fs-extra": "^11.3.0",
     "js-yaml": "^4.1.0"
