chore: Clean up old files and update configurations

--- a/config/brunorc.yaml
+++ b/config/brunorc.yaml
@@ -1,8 +1,8 @@
 agent: bruno
 llm_provider: local
-local_model: deepseek-coder:6.7b-instruct-q4_K_M
+local_model: deepseek-coder:33b-instruct-q4_K_M
 ollama_url: http://127.0.0.1:11434
-fallback_provider: none
+fallback_provider: claude
 allow_cloud: false
 memory: true
 default_tool: explain
